<resources>
    <string name="app_name">KotlinCoroutinePracticeProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="download_with_flow">使用Flow完成下载操作</string>
    <string name="room_with_flow">Flow搭配Room完成数据库操作</string>
    <string name="retrofit_with_flow">Flow搭配Retrofit</string>
    <string name="add_user">添加用户</string>
    <string name="input_user_id">输入id</string>
    <string name="input_user_name">输入名字</string>
    <string name="input_user_age">输入年龄</string>
    <string name="reques">发送请求</string>
</resources>