<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <Button
        android:text="@string/download_with_flow"
        android:id="@+id/btn_flow_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/room_with_flow"
        android:id="@+id/btn_flow_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/retrofit_with_flow"
        android:id="@+id/btn_flow_retrofit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>